--- a/new_quiz.html
+++ b/new_quiz.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Quiz BBY06</title>
+  <title>New_Quiz BBY06</title>
 
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -29,7 +29,7 @@
   <script src="./scripts/firebaseAPI.js"></script>
 
   <!-- Stylesheet link -->
-  <link rel="stylesheet" href="styles/quiz_style.css">
+  <link rel="stylesheet" href="styles/new_quiz_style.css">
 </head>
 
 <body>
@@ -41,7 +41,7 @@
   <div class="container rounded bg-white mt-5 mb-5">
     <div class="row justify-content-center">
       <div>
-        <h1>Fill Out the Form Below to Adjust Your Preferences</h1>
+        <h1>Fill Out the Form Below to get Started!</h1>
         <br>
         <h1 style="color: darkgreen;">Select All That Apply</h1>
 
@@ -102,25 +102,10 @@
         <div id="submit">
           <a href="main.html" class="button">Submit</a>
         </div>
+        <br>
       </div>
     </div>
   </div>
-  <br>
-
-  <nav class="nav">
-    <a href="main.html" class="nav__link">
-      <i class="material-icons nav__icon">home</i>
-      <span class="nav__text">Home</span>
-    </a>
-    <a href="menu.html" class="nav__link">
-      <i class="material-icons nav__icon">restaurant_menu</i>
-      <span class="nav__text">Menu</span>
-    </a>
-    <a href="profile.html" class="nav__link">
-      <i class="material-icons nav__icon">account_circle</i>
-      <span class="nav__text">Profile</span>
-    </a>
-  </nav>
 
   <script>
     var currentUser;
