--- a/login.html
+++ b/login.html
@@ -17,159 +17,24 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
-    </script>
+  </script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
 
-  <!-- Google Icons (Material Design)-->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
   <!-- Link to the api keys for your firebase project -->
-  <script src="./scripts/my_script.js"></script>
+  <script src="./scripts/firebaseAPI.js"></script>
 
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
-
-    nav {
-      font-family: 'Patrick Hand';
-      font-size: 50px;
-      text-shadow: 1px 1px 1px rgb(218, 218, 218);
-    }
-
-    body {
-      font-family: 'Patrick Hand';
-      background-image: url(images/foodbackground.PNG);
-      background-size: cover;
-    }
-
-    .form-control:focus {
-      box-shadow: none;
-      border-color: #BA68C8;
-    }
-
-    .profile-button {
-      background: rgb(0, 168, 28);
-      box-shadow: none;
-      border: none
-    }
-
-    .profile-button:hover {
-      background: rgb(86, 241, 112);
-    }
-
-    .profile-button:focus {
-      background: #682773;
-      box-shadow: none
-    }
-
-    .profile-button:active {
-      background: rgb(86, 241, 112);
-      box-shadow: none
-    }
-
-    .back:hover {
-      color: #682773;
-      cursor: pointer
-    }
-
-    .labels {
-      font-size: 11px
-    }
-
-    .add-experience:hover {
-      background: rgb(0, 168, 28);
-      color: #fff;
-      cursor: pointer;
-      border: solid 1px #BA68C8
-    }
-
-    .container {
-      width: 70%;
-      margin: 0 auto;
-    }
-
-    header {
-      backdrop-filter: blur(25px);
-    }
-
-    header::after {
-      content: '';
-      display: table;
-      clear: both;
-    }
-
-    .logo {
-      float: left;
-      height: 15%;
-      width: 20%;
-      padding: 10px 0;
-
-    }
-
-    nav {
-      float: right;
-    }
-
-    *.signheader {
-      padding: 1.2em;
-      text-align: center;
-      width: 800px;
-      font-size: 45px;
-      margin: 0px auto;
-      width: 50%;
-      border-radius: 5px 10px 15px 20px;
-      font-family:Georgia, 'Times New Roman', Times, serif;
-      backdrop-filter: blur(25px);
-      
-    }
-
-    nav ul {
-      margin: 0;
-      padding: 0;
-      list-style-type: none;
-    }
-
-    nav li {
-      display: inline-block;
-      margin-left: 80px;
-      padding-top: 15px;
-    }
-
-    nav a {
-      color: black;
-      text-decoration: none;
-      text-transform: uppercase;
-      font-weight: 600;
-      font-size: 2vw;
-    }
-
-    nav a:hover {
-      color: black;
-      background-color: whitesmoke;
-      background-image: radial-gradient(lightgreen, whitesmoke);
-    }
-
-    @media screen and (max-width: 700px) {
-      header {
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-      }
-    }
-  </style>
+  <!-- Stylesheet link -->
+  <link rel="stylesheet" type="text/css" href="styles/login_style.css">
 </head>
 
 <body>
-  <header>
-    <div class="container">
-      <img src="images/bowl.png" alt="logo" class="logo">
-    </div>
-  </header>
-  <br><br>
-
-  <div class="signheader"> Sign in to your <b><i>FitMeal</i></b> Account </div>
+  <div class="logo-container">
+    <img class="logo" src="images/bowl.png" alt="Logo">
+    <h1>Your Personal Meal Planning Assistant</h1>
+  </div>
   <br>
 
   <div id="firebaseui-auth-container"></div>
@@ -192,17 +57,18 @@
           // If the user is a "brand new" user, then create a new "user" in your own database.
           // Assign this user with the name and email provided.
           // Before this works, you must enable "Firestore" from the firebase console.
-          // The Firestore rules must allow the user to write. 
+          // The Firestore rules must allow the user to write.
           //------------------------------------------------------------------------------------------
-          var user = authResult.user;                            // get the user object from the Firebase authentication database
-          if (authResult.additionalUserInfo.isNewUser) {         //if new user
-            db.collection("users").doc(user.uid).set({         //write to firestore. We are using the UID for the ID in users collection
-              name: user.displayName,                    //"users" collection
-              email: user.email                          //with authenticated user's ID (user.uid)
-            }).then(function () {
-              console.log("New user added to firestore");
-              window.location.assign("main.html");       //re-direct to main.html after signup
-            })
+          var user = authResult.user; // get the user object from the Firebase authentication database
+          if (authResult.additionalUserInfo.isNewUser) { //if new user
+            db.collection("users").doc(user.uid)
+              .set({ //write to firestore. We are using the UID for the ID in users collection
+                name: user.displayName, //"users" collection
+                email: user.email //with authenticated user's ID (user.uid)
+              }).then(function () {
+                console.log("New user added to firestore");
+                window.location.assign("new_quiz.html"); //re-direct to main.html after signup
+              })
               .catch(function (error) {
                 console.log("Error adding new user: " + error);
               });
