--- a/profile.html
+++ b/profile.html
@@ -23,167 +23,20 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <!-- link to all the api keys for the project -->
-  <script src="scripts/my_script.js"></script>
+  <script src="./scripts/firebaseAPI.js"></script>
 
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
-
-    nav {
-      font-family: 'Patrick Hand';
-      font-size: 50px;
-      text-shadow: 1px 1px 1px rgb(218, 218, 218);
-    }
-
-    body {
-      font-family: 'Patrick Hand';
-      background-image: url(images/foodbackground.PNG);
-      background-size: cover;
-    }
-
-    .form-control:focus {
-      box-shadow: none;
-      border-color: #BA68C8;
-    }
-
-    .profile-button {
-      background: rgb(0, 168, 28);
-      box-shadow: none;
-      border: none
-    }
-
-    .profile-button:hover {
-      background: rgb(86, 241, 112);
-    }
-
-    .profile-button:focus {
-      background: #682773;
-      box-shadow: none
-    }
-
-    .profile-button:active {
-      background: rgb(86, 241, 112);
-      box-shadow: none
-    }
-
-    .back:hover {
-      color: #682773;
-      cursor: pointer
-    }
-
-    .labels {
-      font-size: 11px
-    }
-
-    .add-experience:hover {
-      background: rgb(0, 168, 28);
-      color: #fff;
-      cursor: pointer;
-      border: solid 1px #BA68C8
-    }
-
-    .container {
-      width: 90%;
-      margin: 0 auto;
-    }
-
-    header {
-      background-color: #6BAA75;
-    }
-
-    header::after {
-      content: '';
-      display: table;
-      clear: both;
-    }
-
-    .logo {
-      float: left;
-      height: 15%;
-      width: 15%;
-      padding: 10px 0;
-
-    }
-
-    nav {
-      float: right;
-    }
-
-    nav ul {
-      margin: 0;
-      padding: 0;
-      list-style-type: none;
-    }
-
-    nav li {
-      display: inline-block;
-      margin-left: 80px;
-      padding-top: 15px;
-    }
-
-    nav a {
-      color: black;
-      text-decoration: none;
-      text-transform: uppercase;
-      font-weight: 600;
-      font-size: 2vw;
-    }
-
-    nav a:hover {
-      color: black;
-      background-color: whitesmoke;
-      background-image: radial-gradient(lightgreen, whitesmoke);
-    }
-
-    .collapsible {
-      color: white;
-      cursor: pointer;
-      padding: 5%;
-      width: 100%;
-      border: none;
-      text-align: left;
-      outline: none;
-    }
-
-    .content {
-      padding: 0 5%;
-      max-height: 0;
-      overflow: hidden;
-      transition: max-height 0.2s ease-out;
-      background-color: #f1f1f1;
-    }
-
-    @media screen and (max-width: 700px) {
-      header {
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-      }
-    }
-  </style>
-
+  <!-- Stylesheet link -->
+  <link rel="stylesheet" href="styles/profile_style.css">
 </head>
 
 <body>
-  <header>
-    <div class="container">
-      <img src="images/bowl.png" alt="logo" class="logo">
-      <nav>
-        <ul>
-          <li><a href="main.html"><i class="material-icons" style="font-size: 100%;">home</i>Home</a></li>
-          <li><a href="menu.html"><i class="material-icons" style="font-size: 100%;">restaurant_menu</i>Menu</a></li>
-          <li><a href="profile.html"><i class="material-icons" style="font-size: 100%;">account_circle</i>Profile</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
   <div class="container rounded bg-white mt-5 mb-5">
     <div class="row">
       <div class="col-md-3 border-right">
         <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5"
-            width="150px" src="images/icon.png"><span class="font-weight-bold" style="padding: 4%;">Name</span><span
-            class="text-black-50">name@something.com</span><span> </span>
+            width="150px" src="images/icon.png">
+          <span class="font-weight-bold" id="circle_name" style="padding: 4%;"></span>
+          <span class="text-black-50" id="circle_email"></span>
         </div>
       </div>
       <div class="col-md-5 border-right">
@@ -196,15 +49,17 @@
               <fieldset class="mb-3" id="personalInfoFields" disabled>
                 <div class="form-group">
                   <label>Name</label>
-                  <input type="text" id="nameInput" class="form-control" placeholder="Name">
+                  <input type="text" id="nameInput" class="form-control">
                 </div>
+                <br>
                 <div class="form-group">
                   <label>Email</label>
-                  <input type="text" id="emailInput" class="form-control" placeholder="Email">
+                  <input type="text" id="emailInput" class="form-control" placeholder="email@address.com">
                 </div>
+                <br>
                 <div class="form-group">
                   <label>Phone</label>
-                  <input type="text" id="phoneInput" class="form-control" placeholder="Phone">
+                  <input type="text" id="phoneInput" class="form-control" placeholder="e.g. 555-555-5555">
                 </div>
               </fieldset>
               <div class="d-flex justify-content-end mt-5">
@@ -215,16 +70,16 @@
                   onclick="saveUserInfo()">Save</button>
               </div>
             </form>
+
           </div>
         </div>
       </div>
 
-      
       <div class="col-md-4">
         <div class="p-3 py-5">
           <a href="quiz.html">
             <button type="button" class="btn btn-success" style="font-size: 130%;"><i class="material-icons"
-                style="font-size: 100%;">edit</i>Edit diet restrictions/preferences</button><br>
+                style="font-size: 100%;">edit</i>Edit Diet Preferences</button><br>
           </a>
           <br>
           <button class="collapsible btn-success" style="font-size: 130%;"><i class="material-icons"
@@ -233,7 +88,7 @@
           <div class="content">
             <h4><b style="color: darkgreen;">Q:</b> Are my restriction and preference choices permanent?</h4>
             <h4 style="margin-left: 8%;"><b style="color: darkgreen;">A:</b> No, you can change your restrictions and
-              preferences with the "Edit diet restrictions/preferences" button above.</h4>
+              preferences with the "Edit diet preferences" button above.</h4>
             <h4><b style="color: darkgreen;">Q:</b> How do I log out?</h4>
             <h4 style="margin-left: 8%;"><b style="color: darkgreen;">A:</b> Below, there is a "Log Out" button that
               allows you to log out and access another account.</h4>
@@ -276,8 +131,46 @@
     </div>
   </div>
 
+  <nav class="nav">
+    <a href="main.html" class="nav__link">
+      <i class="material-icons nav__icon">home</i>
+      <span class="nav__text">Home</span>
+    </a>
+    <a href="menu.html" class="nav__link">
+      <i class="material-icons nav__icon">restaurant_menu</i>
+      <span class="nav__text">Menu</span>
+    </a>
+    <a href="profile.html" class="nav__link">
+      <i class="material-icons nav__icon">account_circle</i>
+      <span class="nav__text">Profile</span>
+    </a>
+  </nav>
+
   <script>
     var currentUser;
+
+    function insertName() {
+      firebase.auth().onAuthStateChanged(user => {
+        // Check if user is signed in:
+        if (user) {
+          // Do something for the current logged-in user here:
+          console.log(user.uid);
+          //go to the correct user document by referencing to the user uid
+          currentUser = db.collection("users").doc(user.uid);
+          //get the document for current user.
+          currentUser.get()
+            .then(userDoc => {
+              var user_Name = userDoc.data().name;
+              console.log(user_Name);
+              document.getElementById("circle_name").innerText = user_Name;
+              var user_Email = userDoc.data().email;
+              console.log(user_Email);
+              document.getElementById("circle_email").innerText = user_Email;
+            })
+        }
+      });
+    }
+    insertName();
 
     var coll = document.getElementsByClassName("collapsible");
     var i;
@@ -313,8 +206,14 @@
               if (userName != null) {
                 document.getElementById("nameInput").value = userName;
               }
+              if (userName != null) {
+                document.getElementById("circle_name").value = userName;
+              }
               if (userEmail != null) {
                 document.getElementById("emailInput").value = userEmail;
+              }
+              if (userName != null) {
+                document.getElementById("circle_email").value = userName;
               }
               if (userPhone != null) {
                 document.getElementById("phoneInput").value = userPhone;
@@ -327,7 +226,7 @@
       });
     }
 
-    //call the function to run it 
+    //call the function to run it
     populateInfo();
 
     function editUserInfo() {
@@ -341,18 +240,16 @@
       userPhone = document.getElementById('phoneInput').value;
 
       currentUser.update({
-        name: userName,
-        email: userEmail,
-        phone: userPhone,
-      })
+          name: userName,
+          email: userEmail,
+          phone: userPhone,
+        })
         .then(() => {
           console.log("Document successfully updated!");
         })
 
       document.getElementById('personalInfoFields').disabled = true;
-
     }
-
   </script>
 </body>
 
