--- a/main.html
+++ b/main.html
@@ -52,10 +52,10 @@
 
   <div class="container rounded bg-white mt-5 mb-5" style="padding-bottom: 2%;">
     <div class="row">
-      <h1 style="font-size: 5vw; margin-left: 5%; margin-top: 2%;">Welcome back, <span id="name-goes-here"></span>!
+      <h1 style="font-size: 5vw; text-align: center; margin-top: 2%; font-family: Impact;">Welcome back, <span id="name-goes-here"></span>!
       </h1>
-      <h2 style="color: green; font-size: 4vw; margin-left: 10%;">Craving some more?</h2>
-      <h1 style="font-size: 3vw; margin-left: 3%; margin-top: 2%; text-decoration: underline;">Recomended Menu Items
+      <h2 style="color: green; font-size: 4vw; text-align: center; font-family: 'Times New Roman';">Craving some more?</h2>
+      <h1 style="font-size: 3vw; margin-left: 3%; margin-top: 2%; font-family: 'Times New Roman';">Recomended Menu Items
       </h1>
       <div id="Vegan-go-here" class="row row-cols-auto"></div>
     </div>
